--- a/Glass/AppSettings.config
+++ b/Glass/AppSettings.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0"?>
 <appSettings>
 	<add key="consultaCep" value="1d17d99658a08b01647d890d71c509bb" />
-    <add key="sistema" value="VidroCenter" />
+    <add key="sistema" value="vidrocenter" />
     <add key="ChartImageHandler" value="storage=memory;deleteAfterServicing=true;" />
     <add key="aspnet:MaxHttpCollectionKeys" value="50000" />
     <add key="GravarLogAberturaRelatorio" value="true" />
@@ -11,4 +11,6 @@
     <add key="UrlCadProject" value="http://cadproject.webglass.com.br" />
     <add key="CaminhoSalvarFML" value="D:\Projetos\WebGlass\trunk\Desenvolvimento\Glass\Upload\ArquivoFMLGerado\" />
     <add key="CaminhoSalvarDXF" value="D:\Projetos\WebGlass\trunk\Desenvolvimento\Glass\Upload\ArquivoDXFGerado\" />
+    <!--<add key="CapptaAuthKey" value="795180024C04479982560F61B3C2C06E" />-->
+    <add key="CapptaAuthKey" value="DB47AAA763E74032A771C35FA88277F8" />
 </appSettings>
