commit a3e6cad0: #67535 - Falha ao abrir reimpressão do comprovante cappta

--- a/Glass/AppSettings.config
+++ b/Glass/AppSettings.config
@@ -11,6 +11,6 @@
     <add key="UrlCadProject" value="http://cadproject.webglass.com.br" />
     <add key="CaminhoSalvarFML" value="D:\Projetos\WebGlass\trunk\Desenvolvimento\Glass\Upload\ArquivoFMLGerado\" />
     <add key="CaminhoSalvarDXF" value="D:\Projetos\WebGlass\trunk\Desenvolvimento\Glass\Upload\ArquivoDXFGerado\" />
-    <!--<add key="CapptaAuthKey" value="795180024C04479982560F61B3C2C06E" />-->
-    <add key="CapptaAuthKey" value="DB47AAA763E74032A771C35FA88277F8" />
+    <add key="CapptaAuthKey" value="795180024C04479982560F61B3C2C06E" />
+    <!--<add key="CapptaAuthKey" value="DB47AAA763E74032A771C35FA88277F8" /> produção -->
 </appSettings>
