#60364 - Alterações da NFe 4.00 $36526 - O método de importação de XML foi alterado para permitir importar XML de nota 3.10 e 4.00. As formas de pagamento da tela de importar XMl foi alterada para utilizar as novas formas de pagamento da nota. Foi adicionado a URL de consulta por chave de acesso no XML da NFC-e. Foi adicionado o indicador de presença "Operação Presencial, Fora do Estabelecimento.".

--- a/WebGlass.Business/WebGlass.Business.csproj
+++ b/WebGlass.Business/WebGlass.Business.csproj
@@ -303,6 +303,7 @@
     <Compile Include="MovimentacaoBancaria\Fluxo\BuscarEValidar.cs" />
     <Compile Include="NaturezaOperacao\Fluxo\CRUD.cs" />
     <Compile Include="NotaFiscal\Ajax\Gerar.cs" />
+    <Compile Include="NotaFiscal\Entidade\PagtoNotaFiscal.cs" />
     <Compile Include="NotaFiscal\Fluxo\Gerar.cs" />
     <Compile Include="Obra\Ajax\DadosObra.cs" />
     <Compile Include="Obra\Fluxo\DadosObra.cs" />
