--- a/Glass/AppSettings.config
+++ b/Glass/AppSettings.config
@@ -12,5 +12,6 @@
     <add key="CaminhoSalvarFML" value="D:\Projetos\WebGlass\trunk\Desenvolvimento\Glass\Upload\ArquivoFMLGerado\" />
     <add key="CaminhoSalvarDXF" value="D:\Projetos\WebGlass\trunk\Desenvolvimento\Glass\Upload\ArquivoDXFGerado\" />
     <add key="CapptaAuthKey" value="795180024C04479982560F61B3C2C06E" />
+    <add key="TempoTimeOut" value="20" />
     <!--<add key="CapptaAuthKey" value="DB47AAA763E74032A771C35FA88277F8" /> produção -->
 </appSettings>
