DEV#36 Criação de classe base para o cálculo de desconto e acréscimo
Inclui criação de classes especializadas para o cálculo.

--- a/Glass.Data/Glass.Data.csproj
+++ b/Glass.Data/Glass.Data.csproj
@@ -538,6 +538,22 @@
     <Compile Include="Helper\CalculoIcmsStMT.cs" />
     <Compile Include="Helper\ConnectionString.cs" />
     <Compile Include="Helper\Anexo.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\CalculoStrategyFactory.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Acrescimo\AplicarAcrescimoAmbienteStrategy.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Acrescimo\RemoverAcrescimoAmbienteStrategy.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Desconto\AplicarDescontoAmbienteStrategy.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Desconto\AplicarDescontoGeralStrategy.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Desconto\RemoverDescontoAmbienteStrategy.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Enum\TipoDirecao.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Desconto\RemoverDescontoGeralStrategy.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Acrescimo\RemoverAcrescimoGeralStrategy.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Acrescimo\AplicarAcrescimoGeralStrategy.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\Estrategia\BaseStrategy.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Enum\TipoAplicacao.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Enum\TipoCalculo.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Enum\TipoValor.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\Estrategia\ICalculoStrategy.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\Estrategia\SemAlteracaoStrategy.cs" />
     <Compile Include="Helper\ICalculoIcmsSt.cs" />
     <Compile Include="Helper\IntermacConfig.cs" />
     <Compile Include="Helper\LogArquivo.cs" />
@@ -641,6 +657,7 @@
     <Compile Include="MDFeUtils\GetWebService.cs" />
     <Compile Include="MDFeUtils\ValidaXML.cs" />
     <Compile Include="Medicao\DAL\FotosMedicaoDAO.cs" />
+    <Compile Include="Model\Interfaces\IContainerDescontoAcrescimo.cs" />
     <Compile Include="Model\Interfaces\IProdutoIcmsSt.cs" />
     <Compile Include="Orcamento\DAL\FotosOrcamentoDAO.cs" />
     <Compile Include="PCP\DAL\ArquivoCalcEngineDAO.cs" />
@@ -1174,7 +1191,7 @@
     <Compile Include="Global\Model\Erro.cs" />
     <Compile Include="Global\Model\FotosCliente.cs" />
     <Compile Include="Pedido\Model\FotosPedido.cs" />
-    <Compile Include="Model\Interfaces\IDescontoAcrescimo.cs" />
+    <Compile Include="Model\Interfaces\IProdutoDescontoAcrescimo.cs" />
     <Compile Include="ItemTemplates\StringItemTemplate.cs" />
     <Compile Include="ItemTemplates\MultipleItemTemplate.cs" />
     <Compile Include="ItemTemplates\NumeroItemTemplate.cs" />
