DEV#36 Alteração do projeto, para refletir nova estrutura de arquivos

--- a/Glass.Data/Glass.Data.csproj
+++ b/Glass.Data/Glass.Data.csproj
@@ -539,15 +539,12 @@
     <Compile Include="Helper\ConnectionString.cs" />
     <Compile Include="Helper\Anexo.cs" />
     <Compile Include="Helper\DescontoAcrescimo\CalculoStrategyFactory.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Acrescimo\AplicarAcrescimoAmbienteStrategy.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Acrescimo\RemoverAcrescimoAmbienteStrategy.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Desconto\AplicarDescontoAmbienteStrategy.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Desconto\AplicarDescontoGeralStrategy.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Desconto\RemoverDescontoAmbienteStrategy.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Enum\TipoDirecao.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Desconto\RemoverDescontoGeralStrategy.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Acrescimo\RemoverAcrescimoGeralStrategy.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Acrescimo\AplicarAcrescimoGeralStrategy.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Acrescimo\AcrescimoAmbienteStrategy.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Acrescimo\AcrescimoGeralStrategy.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Comissao\ComissaoGeralStrategy.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Desconto\DescontoAmbienteStrategy.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Desconto\DescontoGeralStrategy.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Desconto\DescontoQuantidadeStrategy.cs" />
     <Compile Include="Helper\DescontoAcrescimo\Estrategia\BaseStrategy.cs" />
     <Compile Include="Helper\DescontoAcrescimo\Estrategia\Enum\TipoAplicacao.cs" />
     <Compile Include="Helper\DescontoAcrescimo\Estrategia\Enum\TipoCalculo.cs" />
