--- a/Glass.Data/Glass.Data.csproj
+++ b/Glass.Data/Glass.Data.csproj
@@ -539,6 +539,7 @@
     <Compile Include="Helper\ConnectionString.cs" />
     <Compile Include="Helper\Anexo.cs" />
     <Compile Include="Helper\DescontoAcrescimo\CalculoStrategyFactory.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\DiferencaCliente.cs" />
     <Compile Include="Helper\DescontoAcrescimo\Estrategia\Acrescimo\AcrescimoAmbienteStrategy.cs" />
     <Compile Include="Helper\DescontoAcrescimo\Estrategia\Acrescimo\AcrescimoGeralStrategy.cs" />
     <Compile Include="Helper\DescontoAcrescimo\Estrategia\Comissao\ComissaoGeralStrategy.cs" />
@@ -551,6 +552,7 @@
     <Compile Include="Helper\DescontoAcrescimo\Estrategia\Enum\TipoValor.cs" />
     <Compile Include="Helper\DescontoAcrescimo\Estrategia\ICalculoStrategy.cs" />
     <Compile Include="Helper\DescontoAcrescimo\Estrategia\SemAlteracaoStrategy.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\Extensoes\ContainerDescontoAcrescimoExtensions.cs" />
     <Compile Include="Helper\DescontoAcrescimo\ValorBruto.cs" />
     <Compile Include="Helper\DescontoAcrescimo\ValorUnitario.cs" />
     <Compile Include="Helper\ICalculoIcmsSt.cs" />
