DEV#36 Refatoração nos métodos de desconto/acréscimo, valor unitário e valor bruto.
Inclui alteração no sistema em todos os locais para utilização das novas estruturas.

--- a/Glass.Data/Glass.Data.csproj
+++ b/Glass.Data/Glass.Data.csproj
@@ -538,23 +538,23 @@
     <Compile Include="Helper\CalculoIcmsStMT.cs" />
     <Compile Include="Helper\ConnectionString.cs" />
     <Compile Include="Helper\Anexo.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\CalculoStrategyFactory.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\DiferencaCliente.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Acrescimo\AcrescimoAmbienteStrategy.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Acrescimo\AcrescimoGeralStrategy.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Comissao\ComissaoGeralStrategy.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Desconto\DescontoAmbienteStrategy.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Desconto\DescontoGeralStrategy.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Desconto\DescontoQuantidadeStrategy.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\Estrategia\BaseStrategy.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Enum\TipoAplicacao.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Enum\TipoCalculo.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\Estrategia\Enum\TipoValor.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\Estrategia\ICalculoStrategy.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\Estrategia\SemAlteracaoStrategy.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\Extensoes\ContainerDescontoAcrescimoExtensions.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\ValorBruto.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\ValorUnitario.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\DescontoAcrescimoStrategyFactory.cs" />
+    <Compile Include="Helper\Calculos\DiferencaCliente.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\DescontoAcrescimo\Acrescimo\AcrescimoAmbienteStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\DescontoAcrescimo\Acrescimo\AcrescimoGeralStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\DescontoAcrescimo\Comissao\ComissaoGeralStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\DescontoAcrescimo\Desconto\DescontoAmbienteStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\DescontoAcrescimo\Desconto\DescontoGeralStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\DescontoAcrescimo\Desconto\DescontoQuantidadeStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\DescontoAcrescimo\BaseStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\DescontoAcrescimo\Enum\TipoAplicacao.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\DescontoAcrescimo\Enum\TipoCalculo.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\DescontoAcrescimo\Enum\TipoValor.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\DescontoAcrescimo\IDescontoAcrescimoStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\DescontoAcrescimo\SemAlteracaoStrategy.cs" />
+    <Compile Include="Helper\Calculos\Extensoes\ContainerDescontoAcrescimoExtensions.cs" />
+    <Compile Include="Helper\Calculos\ValorBruto.cs" />
+    <Compile Include="Helper\Calculos\ValorUnitario.cs" />
     <Compile Include="Helper\ICalculoIcmsSt.cs" />
     <Compile Include="Helper\IntermacConfig.cs" />
     <Compile Include="Helper\LogArquivo.cs" />
@@ -1157,7 +1157,7 @@
     <Compile Include="Handlers\Danfe.cs" />
     <Compile Include="Exceptions\ComissaoGeradaException.cs" />
     <Compile Include="Helper\ConfigDAO.cs" />
-    <Compile Include="Helper\DescontoAcrescimo\Calcular.cs" />
+    <Compile Include="Helper\Calculos\DescontoAcrescimo.cs" />
     <Compile Include="Helper\Email.cs" />
     <Compile Include="Helper\GenericBenef.cs" />
     <Compile Include="Helper\GenericBenefCollection.cs" />
