#69905 Correções de erros teste Master

--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -8781,6 +8781,9 @@
     <EmbeddedResource Include="Relatorios\rptFichaCliente.rdlc">
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Relatorios\rptFichaProduto.rdlc">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Relatorios\rptLimiteChequeCpfCnpj.rdlc">
       <SubType>Designer</SubType>
     </EmbeddedResource>
@@ -8972,9 +8975,6 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Relatorios\rptFichaFornecedor.rdlc" />
-    <EmbeddedResource Include="Relatorios\rptFichaProdutos.rdlc">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
     <EmbeddedResource Include="Relatorios\rptFornadaSintetico.rdlc">
       <SubType>Designer</SubType>
     </EmbeddedResource>
