DEV#36 Refatoração do método de calcular valor unitário, para utilização de estratégias de cálculo de acordo com o tipo de cálculo do produto. Substituição das chamadas do sistema para usar a nova estrutura.

--- a/Glass.Data/Glass.Data.csproj
+++ b/Glass.Data/Glass.Data.csproj
@@ -536,6 +536,20 @@
     <Compile Include="Handlers\Danfes.cs" />
     <Compile Include="Helper\CalculoIcmsStGeral.cs" />
     <Compile Include="Helper\CalculoIcmsStMT.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorUnitarioStrategyFactory.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorUnitario\BaseStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorUnitario\IValorUnitarioStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorUnitario\M2\M2BaseStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorUnitario\M2\M2DiretoStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorUnitario\M2\M2Strategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorUnitario\MLAL\MLAL05Strategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorUnitario\MLAL\MLAL6Strategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorUnitario\MLAL\MLAL1Strategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorUnitario\MLAL\MLAL0Strategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorUnitario\MLAL\MLALBaseStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorUnitario\ML\MLStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorUnitario\Perimetro\PerimetroStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorUnitario\GenericoStrategy.cs" />
     <Compile Include="Helper\ConnectionString.cs" />
     <Compile Include="Helper\Anexo.cs" />
     <Compile Include="Helper\Calculos\Estrategia\DescontoAcrescimoStrategyFactory.cs" />
@@ -658,10 +672,10 @@
     <Compile Include="MDFeUtils\GetWebService.cs" />
     <Compile Include="MDFeUtils\ValidaXML.cs" />
     <Compile Include="Medicao\DAL\FotosMedicaoDAO.cs" />
-    <Compile Include="Model\Interfaces\IContainerDescontoAcrescimo.cs" />
+    <Compile Include="Model\Interfaces\IContainerCalculo.cs" />
     <Compile Include="Model\Interfaces\IProdutoIcmsSt.cs" />
-    <Compile Include="Model\Internal\ContainerDescontoAcrescimo.cs" />
-    <Compile Include="Model\Internal\ProdutoDescontoAcrescimo.cs" />
+    <Compile Include="Model\Internal\ContainerCalculo.cs" />
+    <Compile Include="Model\Internal\ProdutoCalculo.cs" />
     <Compile Include="Orcamento\DAL\FotosOrcamentoDAO.cs" />
     <Compile Include="PCP\DAL\ArquivoCalcEngineDAO.cs" />
     <Compile Include="PCP\DAL\ArquivoCalcEngineVariavelDAO.cs" />
@@ -1194,7 +1208,7 @@
     <Compile Include="Global\Model\Erro.cs" />
     <Compile Include="Global\Model\FotosCliente.cs" />
     <Compile Include="Pedido\Model\FotosPedido.cs" />
-    <Compile Include="Model\Interfaces\IProdutoDescontoAcrescimo.cs" />
+    <Compile Include="Model\Interfaces\IProdutoCalculo.cs" />
     <Compile Include="ItemTemplates\StringItemTemplate.cs" />
     <Compile Include="ItemTemplates\MultipleItemTemplate.cs" />
     <Compile Include="ItemTemplates\NumeroItemTemplate.cs" />
