--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -1486,6 +1486,7 @@
     <Content Include="Utils\SelCheque.aspx" />
     <Content Include="Utils\SelCidade.aspx" />
     <Content Include="Utils\AvaliacaoAtendimento.aspx" />
+    <Content Include="Utils\SelNotaFiscalConsumidorReferenciada.aspx" />
     <Content Include="Utils\VersaoDLLs.aspx" />
     <Content Include="Utils\SelCliente.aspx" />
     <Content Include="Utils\SelColocador.aspx" />
@@ -7571,6 +7572,13 @@
     </Compile>
     <Compile Include="Utils\AvaliacaoAtendimento.aspx.designer.cs">
       <DependentUpon>AvaliacaoAtendimento.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Utils\SelNotaFiscalConsumidorReferenciada.aspx.cs">
+      <DependentUpon>SelNotaFiscalConsumidorReferenciada.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Utils\SelNotaFiscalConsumidorReferenciada.aspx.designer.cs">
+      <DependentUpon>SelNotaFiscalConsumidorReferenciada.aspx</DependentUpon>
     </Compile>
     <Compile Include="Utils\VersaoDLLs.aspx.cs">
       <DependentUpon>VersaoDLLs.aspx</DependentUpon>
