--- a/Comum/Glass.Comum/Glass.Comum.csproj
+++ b/Comum/Glass.Comum/Glass.Comum.csproj
@@ -110,6 +110,7 @@
     <Reference Include="System.Drawing">
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Security">
       <Private>True</Private>
     </Reference>
@@ -131,6 +132,7 @@
     <Compile Include="Armazenamento\ArmazenamentoIsolado.cs" />
     <Compile Include="Arquivos.cs" />
     <Compile Include="AssinaturaDigital.cs" />
+    <Compile Include="Cache\CacheMemoria.cs" />
     <Compile Include="Calculos.cs" />
     <Compile Include="ConsultaCep.cs" />
     <Compile Include="DBUtils.cs" />
