--- a/Glass.Data.Test/Glass.Data.Test.csproj
+++ b/Glass.Data.Test/Glass.Data.Test.csproj
@@ -43,6 +43,7 @@
       <HintPath>..\packages\Castle.Core.4.2.1\lib\net45\Castle.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="GDA, Version=1.4.5.14925, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="Moq, Version=4.8.0.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.8.2\lib\net45\Moq.dll</HintPath>
       <Private>True</Private>
