DEV#36 Refatoração do método de cálculo de valor total

--- a/Glass.Data/Glass.Data.csproj
+++ b/Glass.Data/Glass.Data.csproj
@@ -543,6 +543,23 @@
     <Compile Include="Helper\Calculos\Estrategia\DescontoAcrescimo\Acrescimo\BaseAcrescimoStrategy.cs" />
     <Compile Include="Helper\Calculos\Estrategia\DescontoAcrescimo\Comissao\BaseComissaoStrategy.cs" />
     <Compile Include="Helper\Calculos\Estrategia\DescontoAcrescimo\Desconto\BaseDescontoStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorTotal\BaseStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorTotal\Enum\ArredondarAluminio.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorTotal\GenericoStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorTotal\IValorTotalStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorTotal\M2\M2BaseStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorTotal\M2\M2DiretoStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorTotal\M2\M2Strategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorTotal\MLAL\MLAL05Strategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorTotal\MLAL\MLAL0Strategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorTotal\MLAL\MLAL1Strategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorTotal\MLAL\MLAL6Strategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorTotal\MLAL\MLALBaseStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorTotal\ML\MLStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorTotal\Perimetro\PerimetroStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorTotalStrategyFactory.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorTotal\Qtd\QtdBaseStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorTotal\Qtd\QtdDecimalStrategy.cs" />
     <Compile Include="Helper\Calculos\Estrategia\ValorUnitarioStrategyFactory.cs" />
     <Compile Include="Helper\Calculos\Estrategia\ValorUnitario\BaseStrategy.cs" />
     <Compile Include="Helper\Calculos\Estrategia\ValorUnitario\IValorUnitarioStrategy.cs" />
@@ -557,6 +574,9 @@
     <Compile Include="Helper\Calculos\Estrategia\ValorUnitario\ML\MLStrategy.cs" />
     <Compile Include="Helper\Calculos\Estrategia\ValorUnitario\Perimetro\PerimetroStrategy.cs" />
     <Compile Include="Helper\Calculos\Estrategia\ValorUnitario\GenericoStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorUnitario\Qtd\QtdBaseStrategy.cs" />
+    <Compile Include="Helper\Calculos\Estrategia\ValorUnitario\Qtd\QtdDecimalStrategy.cs" />
+    <Compile Include="Helper\Calculos\ValorTotal.cs" />
     <Compile Include="Helper\ConnectionString.cs" />
     <Compile Include="Helper\Anexo.cs" />
     <Compile Include="Helper\Calculos\Estrategia\DescontoAcrescimoStrategyFactory.cs" />
