DEV#36 Refatoração nas interfaces de cálculo, para reorganizar as competências de cada interface

--- a/Glass.Data.Test/Glass.Data.Test.csproj
+++ b/Glass.Data.Test/Glass.Data.Test.csproj
@@ -86,6 +86,8 @@
   <ItemGroup>
     <Compile Include="Helper\DescontoAcrescimo\CalcularAbstractTest.cs" />
     <Compile Include="Helper\DescontoAcrescimo\CalcularTest.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\ClienteDTO.cs" />
+    <Compile Include="Helper\DescontoAcrescimo\DadosProdutoDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
